# RayTracer-Render

./: CMakeLists.txt  README.md  SimpleEngine.sln  scene.test  scene2.test
SimpleEngine/: .kdtree.cpp.swp  BBox.cpp  BBox.h  BRDF.cpp  BRDF.h  FlatMeshTriangle.cpp  FlatMeshTriangle.h  Grid.cpp  Grid.h  ITaskExecuter.h  ImageTexture.cpp  ImageTexture.h  Log.cpp  Log.h  Mapping.cpp  Mapping.h  Mesh.cpp  Mesh.h  MeshTriangle.cpp  MeshTriangle.h  PathTracer.h  Point.cpp  Point.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Shape.cpp  Shape.h  SimpleEngine.vcxproj  SimpleEngine.vcxproj.filters  SphericalMap.cpp  SphericalMap.h  TaskExecuter.cpp  TaskExecuter.h  Texture.cpp  Texture.h  camera.cpp  (+41 more)
model/: CS-184.1x HW3 edX Autograder Report.html  scene4-ambient.test  scene4-diffuse.test  scene5.test  scene7.test  test.test
model/CS-184.1x HW3 edX Autograder Report_files/: style.css
